# aggregator-python

./: .flaskenv  .gitignore  Dockerfile  README.md  aggregator.py  crontab  docker-compose.yaml  greader.py  persistence.py  requirements.txt  runserver.py  server.py  subscriptions.xml  tests.py
aggregator/: api.py  app.py  cli.py  config.py  content.py  engine.py  graphql.py  models.py  reader.py  sync.py  utils.py
application/: .gitignore  Dockerfile  gunicorn.conf.py  pyproject.toml  requirements.txt  subscriptions.xml
application/aggregator/: api.py  app.py  cli.py  config.py  engine.py  graphql.py  models.py  reader.py
application/aggregator/sanitizer/: __init__.py  entry_content.py
application/reader/: manifest.json
application/reader/css/: aggregator.css
application/reader/js/: aggregator.js
clients/web/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.js
clients/web-v1/: Dockerfile  README.md  nginx.conf
clients/web-v1/reader/: index.html  manifest.json  shortcuts.html
clients/web-v1/reader/js/: aggregator.js
clients/web/public/: index.html  manifest.json
clients/web/src/: App.js  App.jsx  App.scss  Reader.js  Reader.scss  colors.scss  index.jsx  index.scss  setupProxy.js
clients/web/src/hooks/: backend.js
config/: nginx.conf
nginx/: default.conf
reader/: index.html
reader/css/: aggregator.css
reader/js/: aggregator.js
reader/js/cached/: .gitignore  download.py
web/: index.html
web/assets/css/: aggregator.css
web/assets/js/: aggregator.js
(+19 files in other folders)
